# turma

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  turma.example.toml
.agents/: README.md  author.md  critic.md  implementer.md  reviewer.md
.claude/commands/: plan-to-epic.md
.github/workflows/: ci.yml
docs/: CNAME  architecture.md  index.html  smoke-plan-to-beads.md  smoke-turma-run.md
openspec/changes/beads-transcription/: design.md  proposal.md  tasks.md
openspec/changes/critic-loop-v1/: design.md  proposal.md  tasks.md
openspec/changes/gemini-backend/: design.md  proposal.md  tasks.md
openspec/changes/swarm-fetch-and-ff-base-correction/: design.md  proposal.md  tasks.md
openspec/changes/swarm-merge-advancement-stabilization/: design.md  proposal.md  tasks.md
src/turma/: __init__.py  __main__.py  cli.py  config.py  errors.py  planning.py  swarm.py
tests/: test_authoring_claude.py  test_authoring_codex.py  test_authoring_gemini.py  test_authoring_opencode.py  test_cli.py  test_config.py  test_critique_parser.py  test_init.py  test_planning.py  test_planning_resume.py  test_planning_round_runner.py  test_planning_state_machine.py  test_swarm_beads_extensions.py  test_swarm_cli.py  test_swarm_git.py  test_swarm_git_integration.py  test_swarm_pull_request.py  test_swarm_reconciliation.py  test_swarm_run.py  test_swarm_status.py  test_swarm_worker.py  test_swarm_worktree.py  test_transcription_beads.py  test_transcription_cli.py  test_transcription_pipeline.py  test_transcription_tasks_md.py
(+39 files in other folders)
